--- a/src/App.css
+++ b/src/App.css
@@ -51,12 +51,12 @@ body {
   border-radius: 50%;
   padding: none;
   height: 4.5em;
-  opacity: 50%;
+  opacity: 0.5;
   transition: all 0.3s ease;
 }
 
 .flags:hover {
-  opacity: 100%;
+  opacity: 1;
   color: white;
   box-shadow: 0 6px 20px 0 white, 0 6px 20px 0 whitesmoke;
   transition: all 0.3s ease;
@@ -67,7 +67,6 @@ body {
   border-radius: 40px;
   padding: 1em;
   outline: none;
-  opacity: 100%;
   color: white;
   background-color: rgb(13, 99, 32);
   margin-top: 5em;
@@ -105,7 +104,7 @@ body {
   border-radius: 10px;
   background-color: rgb(5, 5, 128);
   color: aliceblue;
-  opacity: 80%;
+  opacity: 0.8;
   padding: 5px 5px 5px 5px;
   width: 55vw;
   align-items: center;
@@ -116,7 +115,7 @@ body {
   transition: all 0.3s ease;
   border: solid;
   border-color: rgb(2, 71, 2);
-  opacity: 100%;
+  opacity: 1;
 }
 
 .club-container {
@@ -260,7 +259,7 @@ body {
   margin-top: 0.2em;
   margin-left: 0.2em;
   margin-bottom: 1em;
-  opacity: 80%;
+  opacity: 0.8;
   transition: all 0.2s ease;
   padding-left: 1em;
   text-align: center;
@@ -303,11 +302,12 @@ body {
     height: 40vh;
     font-size: 1.5em;
     margin: 1em;
-    opacity: 80%;
+    opacity: 0.8;
+    transition: all 0.2s ease;
   }
 
   .country-stadium-card:hover {
-    opacity: 100%;
+    opacity: 1;
   }
 
   .stadium-capacity {
@@ -401,7 +401,7 @@ body {
   align-items: center;
   justify-content: center;
   font-size: 1em;
-  opacity: 80%;
+  opacity: 0.8;
   transition: all 0.2s ease;
   outline: none;
   margin-bottom: 1em;
@@ -411,11 +411,11 @@ body {
   border-radius: 40px;
   margin-right: 1em;
   padding: 1em;
-  opacity: 80%;
+  opacity: 0.8;
 }
 .individual-stadium-home-button:hover {
   background-color: rgb(255, 255, 255);
-  opacity: 100%;
+  opacity: 1;
   transition: all 0.2s ease;
 }
 .button-icon {
