--- a/src/App.css
+++ b/src/App.css
@@ -492,7 +492,7 @@ body {
 }
 
 /* COMMENTS */
-.comments-containter {
+.comments-container {
   display: flex;
   flex-direction: column;
   align-items: stretch;
@@ -500,7 +500,7 @@ body {
   width: 90%;
 }
 
-.comments-containter h1 {
+.comments-container h1 {
   margin-top: 0.5em;
 }
 
